use toList() here